--- a/KotlinTest/src/main/res/layout/activity_main.xml
+++ b/KotlinTest/src/main/res/layout/activity_main.xml
@@ -33,8 +33,8 @@
             android:id="@+id/main_pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:visibility="gone">
 
         </android.support.v4.view.ViewPager>
 
@@ -42,8 +42,7 @@
             android:id="@+id/main_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-         >
+            android:layout_weight="1">
 
         </FrameLayout>
 
