--- a/KotlinTest/src/main/res/menu/navigation.xml
+++ b/KotlinTest/src/main/res/menu/navigation.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="项目" />
 
+    <item
+        android:id="@+id/navigation_navigation"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="导航" />
+
 </menu>
