--- a/KotlinTest/src/main/res/layout/view_banner_item.xml
+++ b/KotlinTest/src/main/res/layout/view_banner_item.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:scaleType="fitXY"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
