--- a/KotlinTest/src/main/res/layout/activity_main.xml
+++ b/KotlinTest/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toobar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
