--- a/app/src/main/res/layout/app_bar_bottom.xml
+++ b/app/src/main/res/layout/app_bar_bottom.xml
@@ -16,12 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/OverflowMenuStyle" />
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_bottom" />
-
 
 
 </android.support.design.widget.CoordinatorLayout>
