添加常用网址页面和数据,将会更改展现方式,现在的fragment展示有问题

--- a/KotlinTest/src/main/res/layout/activity_main.xml
+++ b/KotlinTest/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.v7.widget.Toolbar
+            android:paddingRight="30dp"
             android:id="@+id/toobar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
