--- a/KotlinTest/src/main/res/menu/toolbar.xml
+++ b/KotlinTest/src/main/res/menu/toolbar.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_item1"
+        android:id="@+id/menu_hot"
         android:enabled="true"
         android:orderInCategory="100"
-        android:title="Save"
+        android:title="热"
         android:visible="true"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <!--
      showAsAction有这几大属性(app命名空间与android命名空间显示有些不同
 
@@ -18,11 +18,10 @@
      collapseActionView      声明了这个操作视窗应该被折叠到一个按钮中，当用户选择这个按钮时，这个操作视窗展开。否则，这个操作视窗在默认的情况下是可见的，并且即便在用于不适用的时候，也要占据操作栏的有效空间。
      -->
     <item
-        android:id="@+id/menu_item2"
+        android:id="@+id/menu_often"
         android:enabled="true"
-        android:icon="@mipmap/ic_launcher"
         android:orderInCategory="90"
-        android:title="icon"
+        android:title="常"
         android:visible="true"
         app:showAsAction="ifRoom" />
 </menu>
