--- a/KotlinTest/src/main/res/values/styles.xml
+++ b/KotlinTest/src/main/res/values/styles.xml
@@ -24,5 +24,23 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="activity_DialogTransparent">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--<item name="android:windowFullscreen">true</item>--><!-- 全屏遮挡状态栏-->
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.2</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item> <!--Activity切换动画效果-->
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="DialogEmptyAnimation" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@null</item>
+        <item name="android:windowExitAnimation">@null</item>
+    </style>
 
 </resources>
